# src/db/models/contacts.js
@@ -1,0 +1,37 @@
+// src/db/models/contacts.js
+import { model, Schema } from 'mongoose';
+
+const contactsSchema = new Schema(
+  {
+    name: {
+      type: String,
+      required: true,
+    },
+    phoneNumber: {
+      type: String,
+      required: true,
+    },
+    email: {
+      type: String,
+      default: 'user@gmail.com',
+    },
+    isFavourite: {
+      type: Boolean,
+      default: false,
+    },
+    contactType: {
+      type: String,
+      enum: ['home', 'personal'],
+      required: true,
+      default: 'home',
+    },
+    userId: { type: Schema.Types.ObjectId, ref: 'users', required: true },
+    photo: { type: String },
+  },
+  {
+    timestamps: true,
+    versionKey: false,
+  },
+);
+
+export const ContactsCollection = model('contacts', contactsSchema);
